Fix avatar bubble alignment logic

Fixing forward from https://codereview.chromium.org/2541583002

BUG=670181

Review-Url: https://codereview.chromium.org/2546753002
Cr-Commit-Position: refs/heads/master@{#435694}

Former-commit-id: 0416ad6088bc817e1365b3ddaecc838dc01e261f